# MajsoulPaipuAnalyzer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PAADData.json  README.md  appveyor-linux.yml  appveyor-win.yml  config.json  main.cpp  main.h  main.js  package-lock.json  package.json  result.html
.github/: asset.js  tag.js
.github/workflows/: ci.yml  debugci.yml  linux.yml  macos.yml  tag.yml  tenhoutest.yml  test_macos_PA.yml  windows.yml
SimpleMahjong/: algorithm.js  const.js  index.css  index.html  index.js  ipcr.js  paipu.js  tiles.css
doc/: README.txt  config.md  install_scripts.md  release-notes.txt  result.md  stable-rank.md
i18n/: en-US.json  zh-CN.json  zh-TW.json
lib/: config.js  wshook.js
lib/majsoul/: analyze.js  browseinject.js  majsoul2tenhou.js
src/: algo.cpp  algo.h  analyzer.cpp  analyzer.h  consts.h  header.cpp  header.h  i18n.cpp  i18n.h  index.html  main.cpp  main.h  mdatacompare.cpp  mdatacompare.h  output.cpp  output.h  result.html  resulthtml_generate.js  resultpage.cpp  tiles.cpp  tiles.h
src/lib/: CJsonObject.cpp  CJsonObject.hpp
